--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ProjectMvp</string>
+    <string name="main_rb_home">首页</string>
+    <string name="main_rb_my">我的</string>
 </resources>
