--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,22 @@
 <resources>
+
     <string name="app_name">ProjectMvp</string>
     <string name="main_rb_home">首页</string>
     <string name="main_rb_my">我的</string>
+    <string name="str_login">登录</string>
+
+    <string name="str_loading">加载中&#8230;</string>
+    <string name="str_confirm">确定</string>
+    <string name="str_cancel">取消</string>
+
+
+
+
+
+
+
+
+
+
+
 </resources>
